<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_light"
    tools:context=".Map2Fragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit">

        <TextView
            android:id="@+id/hdrRouten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:text="@string/routesB"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tfEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:text="@string/routesC"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/hdrRouten"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/radio_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto"
                android:background="@drawable/radio_button_border"
                android:padding="8dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:layout_marginBottom="8dp"/>

            <RadioButton
                android:id="@+id/radio_bike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fahrrad"
                android:background="@drawable/radio_button_border"
                android:padding="8dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:layout_marginBottom="8dp"/>

            <RadioButton
                android:id="@+id/radio_transit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oepnv"
                android:background="@drawable/radio_button_border"
                android:padding="8dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:layout_marginBottom="8dp"/>

            <RadioButton
                android:id="@+id/radio_walk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zu_fuss"
                android:background="@drawable/radio_button_border"
                android:padding="8dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"/>
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:alpha="0.7"
        android:text="@string/weiter"
        android:backgroundTint="@color/purple_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
