<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_light"
    tools:context=".HomeFragment" >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/hdrHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tfRoutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/routes"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/route_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/tfEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/events"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/event_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/tfSights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sights"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/sight_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>